Code review feedback:  remove unnecessary field.  Address some sonar issues.